# course-project-1

./: CMakeLists.txt  CMakePresets.json  README.md  database.db  resources.rc
CourseProject/: CMakeLists.txt  CourseProject.cpp  CourseProject.h
CourseProject/include/: App.h  Exception.h  GUI.h  MainWindow.h  SQLController.h
CourseProject/src/: App.cpp  Exception.cpp  GUI.cpp  MainWindow.cpp  SQLController.cpp
